bug fix: invisible cartlist over searchbar
subscribed searchbar throgh props-drilling to App's toggle cart state and animates searchbar to hide on mobile when cart is hidden

--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -4,11 +4,9 @@ html {
 
 .right-column {
   position: absolute;
-  width: 85%;
   overflow: auto;
   left: 15%;
   top: 40px;
-  z-index: 10;
 }
 
 .image-container {
@@ -39,7 +37,7 @@ html {
   .right-column {
     position: static;
     overflow: auto;
-    flex-grow: 0;
+    flex-grow: 1;
   }
 
   .left-column {
